--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mi Sitio Web</title>
+  <title>Galería de Bestiario</title>
 </head>
 <body>
   <div id="app"></div>
+  <!-- Webpack inyectará el bundle aquí -->
 </body>
 </html>
